--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Varvenko, Efimov, Skorikov, Shurigyn",
   "license": "ISC",
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.0.5",
     "config": "^3.3.6",
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
